normally to on a linear scale

--- a/Report/Report.tex
+++ b/Report/Report.tex
@@ -684,7 +684,7 @@
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.75\linewidth]{rmse_growth_linear-basic}
-\caption{RMSE growth for $y$, $\dot{y}$, $\theta$, and $\dot{\theta}$ under increasing noise (linear scale, basic scenario). Unlike the log scale of $x$ and $\dot{x}$, other system parameters RMSE growth can be displayed normally. Measured parameters of the system have significantly higher variance multiplier required for divergence.}
+\caption{RMSE growth for $y$, $\dot{y}$, $\theta$, and $\dot{\theta}$ under increasing noise (linear scale, basic scenario). Unlike the log scale of $x$ and $\dot{x}$, other system parameters RMSE growth can be displayed on a linear scale. Measured parameters of the system have significantly higher variance multiplier required for divergence.}
 \label{fig:rmse-growth-linear-basic}
 \end{figure}
 
